Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-26431

[RocksDB] A number of 'ep_testsuite' tests fail on Jenkins 'kv_engine-linux-master-rocks' build

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • master
    • master
    • couchbase-bucket
    • None

    Description

      The following 'ep_testsuite' fail on Jenkins 'kv_engine-linux-master-rocks' build:

      27 - ep_testsuite.value_eviction.rocksdb (Failed)
      28 - ep_testsuite.full_eviction.rocksdb (Failed)
      32 - ep_testsuite_basic.value_eviction.rocksdb (Failed)

      The following go in timeout (tested the single testsuite, timeout is not caused by the previous failings):

      37 - ep_testsuite_dcp.value_eviction.rocksdb (Timeout)
      38 - ep_testsuite_dcp.full_eviction.rocksdb (Timeout)

      In detail:

       27/126 Test  #27: ep_testsuite.value_eviction.rocksdb ..............***Failed   21.31 sec
      ..
      Running [0026/0158]: warmup conf (couchstore).../home/couchbase/jenkins/workspace/kv_engine-linux-master-rocks/kv_engine/engines/ep/tests/ep_testsuite.cc:2421 Test failed: `' (Expected `100', got `0' - Expected 100 keys loaded after warmup)
      (220 ms) CORE DUMPED
      ..
      Running [0037/0158]: test warmup oom value eviction (couchstore)...WARNING: Found duplicate entry for "item_eviction_policy"
      /home/couchbase/jenkins/workspace/kv_engine-linux-master-rocks/kv_engine/engines/ep/tests/ep_testsuite.cc:3324 Test failed: `' (Expected `130', got `0' - Data traffic command should have failed with enomem)
      (836 ms) CORE DUMPED
      ..
      Running [0065/0158]: test special char keys (couchstore).../home/couchbase/jenkins/workspace/kv_engine-linux-master-rocks/kv_engine/engines/ep/tests/ep_testsuite_common.cc:442 Test failed: `checking key and value' (get_item_info(h, h1, &info, key, vbucket))
      (243 ms) CORE DUMPED
      Running [0066/0158]: test binary keys (couchstore).../home/couchbase/jenkins/workspace/kv_engine-linux-master-rocks/kv_engine/engines/ep/tests/ep_testsuite_common.cc:442 Test failed: `checking key and value' (get_item_info(h, h1, &info, key, vbucket))
      (385 ms) CORE DUMPED
      Running [0067/0158]: test restart (couchstore).../home/couchbase/jenkins/workspace/kv_engine-linux-master-rocks/kv_engine/engines/ep/tests/ep_testsuite_common.cc:442 Test failed: `checking key and value' (get_item_info(h, h1, &info, key, vbucket))
      (457 ms) CORE DUMPED
      Running [0068/0158]: set+get+restart+hit (bin) (couchstore).../home/couchbase/jenkins/workspace/kv_engine-linux-master-rocks/kv_engine/engines/ep/tests/ep_testsuite_common.cc:442 Test failed: `checking key and value' (get_item_info(h, h1, &info, key, vbucket))
      (266 ms) CORE DUMPED
      ..
      # Passed 152 of 158 tests
      

       30/126 Test  #28: ep_testsuite.full_eviction.rocksdb ...............***Failed   30.04 sec
      ..
      Running [0037/0158]: test warmup oom value eviction (couchstore)...WARNING: Found duplicate entry for "item_eviction_policy"
      /home/couchbase/jenkins/workspace/kv_engine-linux-master-rocks/kv_engine/engines/ep/tests/ep_testsuite.cc:3324 Test failed: `' (Expected `130', got `0' - Data traffic command should have failed with enomem)
      (2725 ms) CORE DUMPED
      ..
      # Passed 157 of 158 tests
      

       31/126 Test  #32: ep_testsuite_basic.value_eviction.rocksdb ........***Failed   10.03 sec
      ..
      Running [0035/0051]: delete/set/delete (couchstore).../home/couchbase/jenkins/workspace/kv_engine-linux-master-rocks/kv_engine/engines/ep/tests/ep_testsuite_common.cc:442 Test failed: `checking key and value' (get_item_info(h, h1, &info, key, vbucket))
      (264 ms) CORE DUMPED
      ..
      # Passed 50 of 51 tests
      

      125/126 Test  #37: ep_testsuite_dcp.value_eviction.rocksdb ..........***Timeout 1200.00 sec
      Running [0000/0085]: test dcp vbtakeover stat no stream (couchstore)...(5 ms) SKIPPED
      Running [0001/0085]: test dcp notifier open (couchstore)...(1615 ms) OK
      Running [0002/0085]: test dcp notifier (couchstore)...(327 ms) OK
      Running [0003/0085]: test dcp notifier equal number of items (couchstore)...(110 ms) OK
      Running [0004/0085]: test open consumer (couchstore)...(112 ms) OK
      Running [0005/0085]: test dcp consumer flow control none (couchstore)...(96 ms) OK
      Running [0006/0085]: test dcp consumer flow control static (couchstore)...(89 ms) OK
      Running [0007/0085]: test dcp consumer flow control dynamic (couchstore)...(108 ms) OK
      Running [0008/0085]: test dcp consumer flow control aggressive (couchstore)...(1145 ms) OK
      Running [0009/0085]: test open producer (couchstore)...(111 ms) OK
      Running [0010/0085]: test open producer same cookie (couchstore)...(171 ms) OK
      Running [0011/0085]: test dcp noop (couchstore)...(81 ms) OK
      Running [0012/0085]: test dcp noop failure (couchstore)...(104 ms) OK
      Running [0013/0085]: test dcp consumer noop (couchstore)...(97 ms) OK
      Running [0014/0085]: test dcp replica stream backfill (couchstore)...
      

      126/126 Test  #38: ep_testsuite_dcp.full_eviction.rocksdb ...........***Timeout 1200.00 sec
      Running [0000/0085]: test dcp vbtakeover stat no stream (couchstore)...(8 ms) SKIPPED
      Running [0001/0085]: test dcp notifier open (couchstore)...(81 ms) OK
      Running [0002/0085]: test dcp notifier (couchstore)...(79 ms) OK
      Running [0003/0085]: test dcp notifier equal number of items (couchstore)...(90 ms) OK
      Running [0004/0085]: test open consumer (couchstore)...(92 ms) OK
      Running [0005/0085]: test dcp consumer flow control none (couchstore)...(96 ms) OK
      Running [0006/0085]: test dcp consumer flow control static (couchstore)...(97 ms) OK
      Running [0007/0085]: test dcp consumer flow control dynamic (couchstore)...(96 ms) OK
      Running [0008/0085]: test dcp consumer flow control aggressive (couchstore)...(1117 ms) OK
      Running [0009/0085]: test open producer (couchstore)...(81 ms) OK
      Running [0010/0085]: test open producer same cookie (couchstore)...(105 ms) OK
      Running [0011/0085]: test dcp noop (couchstore)...(102 ms) OK
      Running [0012/0085]: test dcp noop failure (couchstore)...(93 ms) OK
      Running [0013/0085]: test dcp consumer noop (couchstore)...(92 ms) OK
      Running [0014/0085]: test dcp replica stream backfill (couchstore)...
      

      An example of full log at:
      http://cv.jenkins.couchbase.com/job/kv_engine-linux-master-rocks/134/console

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              paolo.cocchi Paolo Cocchi
              paolo.cocchi Paolo Cocchi
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty